tests/errors/builder_virtual.vt
class B { builder virtual fn m() { return this; } } fn main(){}
